Fix backface on ios

--- a/src/App.css
+++ b/src/App.css
@@ -218,6 +218,7 @@ li {
 
 .flip .front,
 .flip .back {
+  transform-style: preserve-3d;
   position: absolute;
   height: 100%;
   width: 100%;
